fix(userspeciality): Modifica implimintacion de lista utilizada